corrected the z-index problem

--- a/public/styles/template.css
+++ b/public/styles/template.css
@@ -43,7 +43,7 @@ body{
   z-index: 3;
   height: 100vh;
   width: 100vw;
-  z-index: 2;
+  z-index: 11;
   background: rgba(0, 0, 0, 0.8);
 }
 .alert{
@@ -51,7 +51,7 @@ body{
   inset: 0;
   height: 100%;
   width: 100%;
-  z-index: 3;
+  z-index: 12;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -212,7 +212,7 @@ aside{
  inset: 0;
  height: 100%;
  width: 100%;
- z-index: 100;
+ z-index: 10;
 }
 .card iframe{
   width: 30%;
